--- a/views/public/partials/posts/cards.ejs
+++ b/views/public/partials/posts/cards.ejs
@@ -28,14 +28,15 @@
             </div>
 
             <div class="card-footer bg-transparent">
-                <hr> Creato da
-                <!-- <a href="/users/<%= post.authorId %>" class="text-info"> -->
-                <a class="text-info">
-                    <%= post.username %>
-                </a>,
-                <%= post.dayOfPublication %>/
-                    <%= post.monthOfPublication %>/
-                        <%= post.yearOfPublication %>
+                <hr>
+                <%- language.createdBy %>
+                    <!-- <a href="/users/<%= post.authorId %>" class="text-info"> -->
+                    <a class="text-info">
+                        <%= post.username %>
+                    </a>,
+                    <%= post.dayOfPublication %>/
+                        <%= post.monthOfPublication %>/
+                            <%= post.yearOfPublication %>
             </div>
 
         </div>
