--- a/views/public/saved.ejs
+++ b/views/public/saved.ejs
@@ -6,9 +6,10 @@
 
             <%- include('./partials/headerEntities') %>
 
-                <p>AGGIUNGERE RICERCA E FILTRO</p>
 
-                <h3>Frasi</h3>
+                <h3>
+                    <%- language.nav.phrases %>
+                </h3>
                 <div class="row">
 
                     <% if (phrases.length) { %>
@@ -23,7 +24,9 @@
 
                 <hr>
 
-                <h3>Post</h3>
+                <h3>
+                    <%- language.nav.posts %>
+                </h3>
                 <div class="row">
 
                     <% if (posts.length) { %>
