--- a/views/admin/partials/profileDropdown.ejs
+++ b/views/admin/partials/profileDropdown.ejs
@@ -1,7 +1,7 @@
 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in " aria-labelledby="userDropdown ">
 
     <a class="dropdown-item " href="/admin/profile">
-        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400 "></i> Profile
+        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400 "></i> Profilo
     </a>
 
     <div class="dropdown-divider "></div>
