--- a/views/admin/phrases/update.ejs
+++ b/views/admin/phrases/update.ejs
@@ -25,62 +25,18 @@
                             <select class="custom-select" name="quotedById" id="quotedById">
                                 <option value="" selected>Nessuno ...</option>
                                 <% quotedById.forEach(person => { %>
-                                    <!-- aggiungere l'immagine della persona !!-->
                                     <% if (person.id === phrase.quotedById) { %>
-                                        <option value="<%= person.id %>" selected><%= person.name %> <%= person.surname %> <!-- | <i class="fas fa-info-circle"></i> --></option>
+                                        <option value="<%= person.id %>" selected><%= person.name %> <%= person.surname %> </option>
                                     <% } else { %>
-                                        <option value="<%= person.id %>"><%= person.name %> <%= person.surname %> <!-- | <i class="fas fa-info-circle"></i> --></option>
+                                        <option value="<%= person.id %>"><%= person.name %> <%= person.surname %> </option>
                                     <% } %>
                                 <% }); %>
-                                <!-- <option value='new'>Crea uno nuovo (sei proprio sicuro di voler creare un modal???)</option> -->
                             </select>
-
-                            <!-- <script>
-                                const checkValue = param => {
-                                    if (param === 'new') {
-                                        console.log(param + 'opening modal ...')
-                                    }
-                                }
-                            </script> -->
                         </div>
 
-                        <!-- <div class="form-group col-md-6">
-                            Input palette (per le quote "")
-                        </div> ;; già presente nella person -->
 
-                        <!-- slider "Utilizzare l'immagine relativa alla persona", se si switcha input type file.hidden = false; -->
-
-
-
-
-
-
-
-
-                        <!-- <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="inputFile"><i class="fas fa-upload"></i></span>
-                            </div>
-                            <div class="custom-file">
-                                <input type="file" class="custom-file-input" name="image" id="image" onchange="checkFile(this)" aria-describedby="inputFile">
-                                <label class="custom-file-label" for="image">Selezionare l'immagine</label>
-                            </div>
-                        </div>
-
-                        <div class="col-12 d-flex justify-content-center align-items-end">
-                            <div class="col-xl-10 col-lg-12 mb-3">
-                                <img id="imagePreview" src="#" style="width: 100%;" hidden>
-                            </div>
-
-                            <i class="fas fa-trash text-primary fa-2x mb-3" id="btnDeleteImage" onclick="deleteImage()" hidden></i>
-                        </div> -->
 
                         <%- include('../partials/form/imageUpload') %>
-
-
-
-
-
 
 
                             <% if (phrase.img && phrase.img !== '') { %>
@@ -93,8 +49,6 @@
                                     <button type="button" style="background-color: transparent; border: none;" id="trashOldImg" onclick="deleteSavedImage(['oldImg', 'trashOldImg', 'iconOldImg'])">
                                     <i class="fas fa-trash text-primary fa-2x mb-3 ml-2" id="iconOldImg"></i>
                                 </button>
-
-                                    <!-- <i class="fas fa-trash text-primary fa-2x mb-3 " id="deleteSavedImage " hidden></i> -->
 
                                 </div>
 
@@ -138,10 +92,10 @@
 
 
 
-        <!-- <script src="/js/admin/crudPeople.js"></script> -->
+
 
         <script src="/js/admin/switchPhrasePost.js"></script>
         <script src="/js/admin/utilsS3.js"></script>
-        <!-- <script src="/js/admin/crudPhrases.js"></script> -->
+
 
         <%- include('./../partials/footer') %>
