--- a/views/public/partials/header.ejs
+++ b/views/public/partials/header.ejs
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="it">
-<!-- da sostituire con la lingua { account.lang } -->
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>I'm with you</title>
 
-    <!-- <link rel="stylesheet" href="/css/main.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
@@ -27,9 +25,6 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>  -->
 </head>
 
 <body style="background-color: #333333;">
@@ -45,7 +40,6 @@
             <div id="content">
 
                 <!-- Topbar -->
-                <!-- <nav class="navbar navbar-expand topbar mb-4 static-top shadow"> -->
                 <nav class="navbar navbar-expand-md mb-4 shadow-lg rounded">
 
                     <a href="/" class="d-flex justify-content-center align-items-center">
