--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,7 +1,8 @@
 <%- include('./partials/header') %>
+
     <!-- Begin page content -->
     <div class="container-fluid">
-        <!-- page heading -->
+
         <div class="d-flex align-items-center justify-content-between mb-4">
             <h1 class="h3 mb-0 mr-4 text-gray-800 ">Dashboard</h1>
         </div>
@@ -16,10 +17,9 @@
 
 
 
-        <!-- Content row // valutare un FOREACH !! -->
         <div class="row ">
 
-            <!-- Numero frasi (card) -->
+            <!-- Numero frasi -->
             <div class="col-xl-6 col-md-12 mb-4 ">
                 <div class="card border-left-primary shadow h-100 py-2 ">
                     <div class="card-body ">
@@ -75,13 +75,10 @@
 
 
 
-
-
-
         <!-- Content row -->
         <div class="row ">
 
-            <!-- Numero post (card) -->
+            <!-- Numero post -->
             <div class="col-xl-6 col-md-12 mb-4 ">
                 <div class="card border-left-primary shadow h-100 py-2 ">
                     <div class="card-body ">
@@ -184,15 +181,12 @@
                                                                         </div>
                                                                         <div class="card-footer bg-transparent" style="border: none;">
                                                                             <hr> Creato da
-                                                                            <!-- <a href="/users/<%= phrase.authorId %>" class="text-info"> -->
                                                                             <a class="text-info">
                                                                                 <%= phrase.username %>
                                                                             </a>,
                                                                             <%= phrase.dayOfPublication %>/
                                                                                 <%= phrase.monthOfPublication %>/
                                                                                     <%= phrase.yearOfPublication %>
-                                                                                        </small>
-                                                                                        </p>
                                                                         </div>
                                                                 </div>
                                                         </div>
@@ -220,11 +214,9 @@
 
                                                 <div class="card-footer bg-transparent">
                                                     <hr> Creato da
-                                                    <!-- <a href="/users/<%= post.authorId %>" class="text-info"> -->
                                                     <a class="text-info">
                                                         <%= post.username %>
-                                                    </a>
-                                                    <!-- </a> -->,
+                                                    </a>,
                                                     <%= post.dayOfPublication %>/
                                                         <%= post.monthOfPublication %>/
                                                             <%= post.yearOfPublication %>
@@ -249,7 +241,7 @@
                                         <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                                             <h6 class="m-0 font-weight-bold text-info">Utenti attivi nelle ultime 24h</h6>
                                         </div>
-                                        <!-- Card Body -->
+
                                         <div class="card-body">
                                             <div class="chart-pie pt-4 pb-2">
                                                 <canvas id="usersActivePieChart"></canvas>
@@ -269,9 +261,8 @@
             <!-- end of container-fluid -->
         </div>
 
-        <!-- script only for this page -->
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js " integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin=" anonymous "></script>
         <script src="/js/admin/dashboard.js "></script>
-
 
         <%- include('./partials/footer') %>
