--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,7 +5,7 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <h1>Crea un account</h1>
-                <p class="font-italic">Creare un account è vantaggioso in quanto permette di salvarti i post che ti piacciono in una tua personale raccolta!</p>
+                <p class="font-italic">Creare un account è vantaggioso in quanto permette di salvare le frasi e i post che ti piacciono in una tua personale raccolta!</p>
 
                 <%- include('./partials/flashMessages') %>
             </div>
@@ -14,8 +14,6 @@
         <div class="col-md-7 col-lg-6">
             <form action="/register" method="POST" id="uploadForm">
 
-
-                <!-- metto un benvenuto con NODEMAILER -->
                 <div class="row">
                     <div class="input-group col-lg-12 mb-4">
                         <div class="input-group-prepend">
@@ -79,13 +77,6 @@
                 </div>
 
                 <%- include('./admin/partials/form/passwordRequirements') %>
-                    <!-- <div class="row" id="passwordErrors" class="alert alert-warning password-alert" role="alert" hidden>
-                    <ul>
-                        <li class="requirements len"><i class="fas fa-check text-success" id="validLen" hidden></i><i class="fas fa-times text-danger" id="wrongLen"></i> La password deve essere almeno di 8 caratteri</li>
-                        <li class="requirements len"><i class="fas fa-check text-success" id="validEquals" hidden></i><i class="fas fa-times text-danger" id="wrongEquals"></i> Le due password devono combaciare</li>
-                    </ul>
-                </div> -->
-
 
                     <div class="row">
                         <div class="form-group col-lg-12 mx-auto mb-0">
@@ -101,14 +92,6 @@
                         </div>
                     </div>
 
-                    <!-- <div class="row">
-                        <div class="form-group col-lg-12 mx-auto">
-                            <a href="#" class="btn btn-primary btn-block py-2 btn-google">
-                                <i class="fab fa-google mr-2"></i>
-                                <span class="font-weight-bold">Accedi con Google</span>
-                            </a>
-                        </div>
-                    </div> -->
 
                     <div class="text-center w-100" style="z-index: 99;">
                         <p class="font-weight-bold mb-10">Hai già un account? <a href="/login" class="ml-1 text-info">Login</a></p>
@@ -120,7 +103,6 @@
         </div>
 
 
-        <!-- <script src="/js/utilsFlashMessages.js"></script> -->
         <script src="/js/password.js"></script>
 
         <%- include('./public/partials/footer') %>
