--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -103,16 +103,9 @@ body {
     color: #D66060;
 }
 
-
-/* .heartForSavingHover {
-    position: absolute;
-    right: 16px;
-    top: 16px;
-    visibility: hidden;
-    color: #D66060;
-} */
-
-
-/* .heartForSavingHover:hover {
-    visibility: visible !important;
-} */
+.myFlagFooter {
+    height: 40px;
+    padding: 3px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
