--- a/views/public/partials/footer.ejs
+++ b/views/public/partials/footer.ejs
@@ -8,9 +8,16 @@
             <span>Copyright &copy; <a href="https://github.com/matteo-naccarato/im-with-you">I'm with you</a> 2021</span>
         </div>
     </div>
+
+    <!-- Language switch -->
     <div class="container my-auto">
-        <div style="height: 30px; position: fixed; bottom: 10px; right: 15px;">
-            CAMBIO LINGUA (ita e en)
+        <div style="height: 30px; position: fixed; bottom: 15px; right: 2px;">
+            <a href="/lang/it">
+                <img src="/assets/flags/128x128/it.png" class="myFlagFooter">
+            </a>
+            <a href="/lang/en">
+                <img src="/assets/flags/128x128/gb.png" class="myFlagFooter">
+            </a>
         </div>
     </div>
 </footer>
